--- a/css/empForm.css
+++ b/css/empForm.css
@@ -75,6 +75,7 @@ body {
     flex-direction: row;
     margin-bottom: 10px;
     align-items: center;
+    border: 0px solid green;
 }
  .label {
     min-width: 140px;
@@ -96,3 +97,20 @@ body {
     border-radius: 4px;
     resize: vertical;
 } 
+/*UC3*/
+
+.profile-radio-content {
+    display: flex;
+    flex-direction: row;
+}
+/*CSS Selectors*/
+.profile-radio-content > label {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.profile {
+    width: 40px;
+    border-radius: 50%;
+    margin-left: 12px;
+}
